<resources>
    <string name="app_name">DoAnCuoiKyMobile</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <!-- Empty State Strings -->
    <string name="empty_state">Empty State</string>
    <string name="no_songs">No Songs</string>
    <string name="empty_state_message">No items found</string>
    <string name="explore">Explore</string>
    
    <!-- Notification Strings -->
    <string name="album_art">Album Art</string>
    <string name="unknown_song">Unknown Song</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="play_pause">Play/Pause</string>
    <string name="close">Close</string>
    <string name="now_playing">Now Playing</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="add">Add</string>
</resources>